# sage-quant

./: .gitignore  README.md  docs.md  pyproject.toml
.github/workflows/: ci.yml
data/: benchmarks.csv
quantsage/: __init__.py  catalog.py  cli.py  data.py  models.py  recommender.py  serve_config.py
sage_quant/: __init__.py  cli.py  data.py  recommender.py
tests/: test_recommender.py  validate_dataset.py
