[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-quant"
version = "0.2.2"
description = "SageQuant: Open-source inference tradeoff calculator and quantization advisor"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["quantization", "llm", "inference", "vllm", "mlx", "serving"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/aakriti1318/sage-quant"
Repository = "https://github.com/aakriti1318/sage-quant"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
advanced = [
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "streamlit>=1.20.0",
]

[tool.setuptools]
packages = ["sage_quant", "sage_quant.datasets"]

[tool.setuptools.package-data]
"sage_quant.datasets" = ["*.csv"]

[project.scripts]
sage-quant = "sage_quant.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
